<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="spell_checker_service_name">LeanType Spell Checker</string>
    <string name="ime_name">LeanType</string>
    <string name="ime_settings">LeanType Settings</string>
    <string name="android_spell_checker_settings">LeanType Spell Checker Settings</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="vibrate_in_dnd_mode">Vibrate in do not disturb mode</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="suggest_emojis">Suggest emojis</string>
    <string name="suggest_emojis_summary">Use emoji dictionary in normal suggestions</string>
    <string name="inline_emoji_search">Inline emoji search</string>
    <string name="inline_emoji_search_summary">Suggest only emojis when a word is preceded by a colon</string>
    <string name="emoji_dictionary_required">An emoji dictionary is required for this feature to work. Dictionaries in .dict format can be downloaded %s.</string>
    <string name="show_emoji_descriptions">Show emoji description on long press</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_gesture">Gesture Typing</string>
    <string name="settings_screen_correction">Text correction</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="settings_category_input">Input</string>
    <string name="settings_category_additional_keys">Additional keys</string>
    <string name="settings_category_clipboard_history">Clipboard history</string>
    <string name="settings_category_correction">Corrections</string>
    <string name="settings_category_space">Space</string>
    <string name="settings_category_suggestions">Suggestions</string>
    <string name="settings_category_experimental">Experimental</string>
    <string name="settings_category_miscellaneous">Miscellaneous</string>
    <string name="settings_category_configuration">Configuration</string>
    <string name="settings_category_visuals">Visuals &amp; Preview</string>
    <string name="settings_category_behavior">Behavior</string>
    <string name="settings_category_gestures_advanced">Advanced Gestures</string>
    <string name="enable_split_keyboard">Enable split keyboard</string>
    <string name="enable_split_keyboard_landscape">Enable split keyboard (landscape)</string>
    <string name="split_spacer_scale">Split distance</string>
    <string name="language_switch_key_switch_input_method">Switch to other input methods</string>
    <string name="switch_language">Switch language</string>
    <string name="language_switch_key_switch_both">Switch both</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="language_switch_key_behavior">Language switch key behavior</string>
    <string name="show_emoji_key">Emoji key</string>
    <string name="abbreviation_unit_milliseconds">%s ms</string>
    <string name="abbreviation_unit_minutes">%s min</string>
    <string name="settings_system_default">System default</string>
    <string name="settings_no_limit">No limit</string>
    <string name="use_contacts_dict">Look up contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="use_apps_dict">Look up app names</string>
    <string name="use_apps_dict_summary">Use names of installed apps for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="disable_personalized_dicts_message">Warning: Disabling this setting will clear learned data</string>
    <string name="add_to_personal_dictionary">Add words to personal dictionary</string>
    <string name="add_to_personal_dictionary_summary">Use device personal dictionary to store learned words</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_always_show_suggestions">Always show suggestions</string>
    <string name="prefs_always_show_suggestions_summary">Ignore other apps’ request to disable suggestions (may cause issues)</string>
    <string name="prefs_always_show_suggestions_except_web_text">Don’t always show suggestions for web edit fields</string>
    <string name="prefs_always_show_suggestions_except_web_text_summary">Web edit fields (mostly found in browsers) are a very common cause for issues with the always show suggestions setting</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="autocorrect">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="more_autocorrect">More auto-correction</string>
    <string name="more_autocorrect_summary">Auto-correct even when not explicitly requested by the input field</string>
    <string name="auto_correction_confidence">Auto-correction confidence</string>
    <string name="auto_correct_shortcuts">Auto-correct shortcuts</string>
    <string name="auto_correct_shortcuts_summary">When enabled shortcuts might be expanded by autocorrect</string>
    <string name="backspace_reverts_autocorrect">Backspace reverts autocorrect</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="center_suggestion_text_to_enter">Always use middle suggestion</string>
    <string name="center_suggestion_text_to_enter_summary">On pressing space or punctuation, the middle suggestion will be entered</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="suggest_punctuation">Punctuation suggestions</string>
    <string name="suggest_punctuation_summary">Show punctuation when no other suggestions are available</string>
    <string name="suggest_clipboard_content">Suggest clipboard content</string>
    <string name="suggest_clipboard_content_summary">Show recently copied clipboard content as a suggestion</string>
    <string name="suggest_screenshots">Suggest recent screenshots</string>
    <string name="suggest_screenshots_summary">Show recently taken screenshots as a suggestion</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_static">Floating preview</string>
    <string name="gesture_floating_preview_static_summary">See the suggested word while gesturing</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_dynamic_summary">Move the preview during a gesture</string>
    <string name="gesture_space_aware">Phrase gesture</string>
    <string name="gesture_space_aware_summary">Input spaces during gestures by gliding to the space key</string>
    <string name="gesture_fast_typing_cooldown">Rapid typing cooldown</string>
    <string name="gesture_fast_typing_cooldown_instant">Always start instantly</string>
    <string name="gesture_trail_fadeout_duration">Gesture trail lifespan</string>
    <string name="enable_clipboard_history">Enable clipboard history</string>
    <string name="enable_clipboard_history_summary">If disabled, clipboard key will paste clipboard content if any</string>
    <string name="clipboard_history_retention_time">History retention time</string>
    <string name="clipboard_history_pinned_first">Show pinned items on top</string>
    <string name="clipboard_fold_pinned">Fold pinned items by default</string>
    <string name="clear_clipboard_icon">Clear clipboard icon</string>
    <string name="clear_clipboard_icon_summary">Select the icon style for the clear clipboard button</string>
    <string name="clear_clipboard_icon_bin">Trash bin</string>
    <string name="clear_clipboard_icon_sweep">Sweep / Clear all</string>
    <string name="clear_clipboard_icon_sweep_slanted">Slanted lines</string>
    <string name="clear_clipboard_icon_clipboard_slash">Outline clipboard with slash</string>
    <string name="clear_clipboard_icon_legacy">Classic clipboard</string>
    <string name="clipboard_pinned">Pinned</string>
    <string name="clipboard_search_hint">Search clips...</string>
    <string name="clipboard_empty_text">No items found</string>
    <string name="clipboard_item_deleted">Item deleted</string>
    <string name="clipboard_no_search_results">No results found</string>
    <string name="clipboard_clear_all_confirmation">Are you sure you want to clear all history?</string>
    <string name="clear_all">Clear All</string>
    <string name="delete_swipe">Delete swipe</string>
    <string name="delete_swipe_summary">Perform a swipe from the delete key to select and remove bigger portions of text at once</string>
    <string name="backup_restore_title">Backup and restore</string>
    <string name="backup_restore_message">Save or load from file. Warning: restore will overwrite existing data</string>
    <string name="backup_error">Backup error: %s</string>
    <string name="restore_error">Error restoring the backup: %s</string>
    <string name="button_backup">Backup</string>
    <string name="button_restore">Restore</string>
    <string name="backup_restored">Backup restored</string>
    <string name="timestamp_format_title">Format for timestamp key</string>
    <string name="secondary_locale">Multilingual typing</string>
    <string name="locales_with_dict">Languages with dictionaries</string>
    <string name="load_gesture_library">Load gesture typing library</string>
    <string name="load_gesture_library_summary">Provide a native library to enable gesture typing</string>
    <string name="voice_mode_title">Voice Transcription</string>
    <string name="voice_mode_tap">Tap</string>
    <string name="voice_mode_hold">Hold</string>
    <string name="voice_status_idle">Tap the mic to start</string>
    <string name="voice_reformat_label">Reformat</string>
    <string name="voice_action_copy">Copy</string>
    <string name="voice_action_cancel">Cancel</string>
    <string name="voice_grant_permission">Grant microphone access</string>
    <string name="voice_open_providers">Configure voice provider</string>
    <string name="voice_action_paste">Paste</string>
    <string name="voice_action_backspace">Backspace</string>
    <string name="voice_action_enter">Enter</string>
    <string name="voice_action_select_all">Select all</string>
</resources>